--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 altair==4.1.0
-matplotlib @ file:///Users/runner/miniforge3/conda-bld/matplotlib-base_1597428382099/work
-numba @ file:///Users/runner/miniforge3/conda-bld/numba_1594681214313/work
-numpy @ file:///Users/runner/miniforge3/conda-bld/numpy_1595522880089/work
-pandas==1.1.0
-prettytable==0.7.2
-scipy @ file:///Users/runner/miniforge3/conda-bld/scipy_1595583614364/work
+matplotlib==3.0.2
+numba==0.41.0
+numpy==1.15.4
+pandas==0.23.4
+scipy==1.1.0
 streamlit==0.64.0
